[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Map/Regions/15 Region 12.png" type="Texture" id=1]
[ext_resource path="res://Assets/Map/Regions/9 Region 7.png" type="Texture" id=2]
[ext_resource path="res://Assets/Map/Regions/3 Region 3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Map/Regions/0 Region 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Map/Regions/16 Region 13.png" type="Texture" id=5]
[ext_resource path="res://Assets/Map/Regions/1 CAR.png" type="Texture" id=6]
[ext_resource path="res://Assets/Map/Regions/14 Region 11.png" type="Texture" id=7]
[ext_resource path="res://Assets/Map/Sea/sea.png" type="Texture" id=8]
[ext_resource path="res://Assets/Map/Regions/11 Region 9.png" type="Texture" id=9]
[ext_resource path="res://Assets/Map/Regions/2 Region 2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Map/Regions/12 Region 10.png" type="Texture" id=11]
[ext_resource path="res://Assets/Map/Regions/13 BARMM.png" type="Texture" id=12]
[ext_resource path="res://Assets/Map/Regions/5 Region 4A.png" type="Texture" id=13]
[ext_resource path="res://Assets/Map/Regions/4 NCR.png" type="Texture" id=14]
[ext_resource path="res://Assets/Map/Regions/7 Region 5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Map/Regions/8 Region 6.png" type="Texture" id=16]
[ext_resource path="res://Assets/Map/Regions/10 Region 8.png" type="Texture" id=17]
[ext_resource path="res://Assets/Map/Regions/6 Mimaropa.png" type="Texture" id=18]
[ext_resource path="res://Assets/Shop/Back Button.png" type="Texture" id=19]
[ext_resource path="res://Assets/Shop/Money Icon.png" type="Texture" id=20]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Assets/Map/adcel-villanueva-pixel-061220-2.jpg" type="Texture" id=22]
[ext_resource path="res://Scenes/Map/Region Huds/RegionHud.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Map/RegionHudPopup.gd" type="Script" id=24]
[ext_resource path="res://Assets/Map/Regions Mask/0 Region 1 - mask.bmp" type="BitMap" id=25]
[ext_resource path="res://Assets/Map/Regions Mask/1 CAR.bmp" type="BitMap" id=26]
[ext_resource path="res://Assets/Map/Regions Mask/2 Region 2.bmp" type="BitMap" id=27]
[ext_resource path="res://Assets/Map/Regions Mask/3 Region 3.bmp" type="BitMap" id=28]
[ext_resource path="res://Assets/Map/Regions Mask/4 NCR.bmp" type="BitMap" id=29]
[ext_resource path="res://Assets/Map/Regions Mask/5 Region 4A.bmp" type="BitMap" id=30]
[ext_resource path="res://Assets/Map/Regions Mask/6 Mimaropa.bmp" type="BitMap" id=31]
[ext_resource path="res://Assets/Map/Regions Mask/7 Region 5.bmp" type="BitMap" id=32]
[ext_resource path="res://Assets/Map/Regions Mask/8 Region 6.bmp" type="BitMap" id=33]
[ext_resource path="res://Assets/Map/Regions Mask/9 Region 7.bmp" type="BitMap" id=34]
[ext_resource path="res://Assets/Map/Regions Mask/10 Region 8.bmp" type="BitMap" id=35]
[ext_resource path="res://Assets/Map/Regions Mask/11 Region 9.bmp" type="BitMap" id=36]
[ext_resource path="res://Assets/Map/Regions Mask/12 Region 10.bmp" type="BitMap" id=37]
[ext_resource path="res://Assets/Map/Regions Mask/13 BARMM.bmp" type="BitMap" id=38]
[ext_resource path="res://Assets/Map/Regions Mask/14 Region 11.bmp" type="BitMap" id=39]
[ext_resource path="res://Assets/Map/Regions Mask/15 Region 12.bmp" type="BitMap" id=40]
[ext_resource path="res://Assets/Map/Regions Mask/16 Region 13.bmp" type="BitMap" id=41]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Money/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "TurningCoin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Money/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="DynamicFont" id=3]
size = 35
extra_spacing_char = -5
font_data = ExtResource( 21 )

[node name="MapUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sea" type="Sprite" parent="."]
scale = Vector2( 1.542, 1.325 )
texture = ExtResource( 8 )
centered = false

[node name="map" type="Sprite" parent="."]
visible = false
position = Vector2( 1475.5, 759.5 )
scale = Vector2( 1.54323, 1.38638 )
texture = ExtResource( 22 )

[node name="Money" type="AnimationPlayer" parent="."]
autoplay = "TurningCoin"
anims/RESET = SubResource( 1 )
anims/TurningCoin = SubResource( 2 )

[node name="Account" type="Label" parent="Money"]
margin_left = 384.0
margin_top = 1341.0
margin_right = 1079.0
margin_bottom = 1391.0
custom_colors/font_color = Color( 0.027451, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Php 1, 534, 954, 030.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Money"]
position = Vector2( -910, 1962 )
texture = ExtResource( 20 )
offset = Vector2( 1209, -612 )
hframes = 8

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Buttons"]
margin_left = 96.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 288, 680 )
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0 Region 1" type="TextureButton" parent="Buttons"]
margin_left = 1826.0
margin_top = 112.0
margin_right = 2114.0
margin_bottom = 280.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1 CAR" type="TextureButton" parent="Buttons"]
margin_left = 2006.0
margin_top = 166.0
margin_right = 2202.0
margin_bottom = 280.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 6 )
texture_click_mask = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2 Region 2" type="TextureButton" parent="Buttons"]
margin_left = 2056.0
margin_top = 8.0
margin_right = 2365.0
margin_bottom = 303.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 10 )
texture_click_mask = ExtResource( 27 )

[node name="3 Region 3" type="TextureButton" parent="Buttons"]
margin_left = 1766.0
margin_top = 304.0
margin_right = 2040.0
margin_bottom = 395.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 3 )
texture_click_mask = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4 NCR" type="TextureButton" parent="Buttons"]
margin_left = 1791.0
margin_top = 363.0
margin_right = 1862.0
margin_bottom = 422.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 14 )
texture_click_mask = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5 Region 4A" type="TextureButton" parent="Buttons"]
margin_left = 1662.0
margin_top = 394.0
margin_right = 1905.0
margin_bottom = 559.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 13 )
texture_click_mask = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6 Mimaropa" type="TextureButton" parent="Buttons"]
margin_left = 468.0
margin_top = 449.0
margin_right = 1346.0
margin_bottom = 645.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 18 )
texture_click_mask = ExtResource( 31 )

[node name="7 Region 5" type="TextureButton" parent="Buttons"]
margin_left = 1731.0
margin_top = 525.0
margin_right = 1998.0
margin_bottom = 710.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 15 )
texture_click_mask = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8 Region 6" type="TextureButton" parent="Buttons"]
margin_left = 1324.0
margin_top = 622.0
margin_right = 1557.0
margin_bottom = 823.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 16 )
texture_click_mask = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9 Region 7" type="TextureButton" parent="Buttons"]
margin_left = 1331.0
margin_top = 788.0
margin_right = 1613.0
margin_bottom = 938.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 2 )
texture_click_mask = ExtResource( 34 )

[node name="10 Region 8" type="TextureButton" parent="Buttons"]
margin_left = 1703.0
margin_top = 704.0
margin_right = 1997.0
margin_bottom = 887.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 17 )
texture_click_mask = ExtResource( 35 )

[node name="11 Region 9" type="TextureButton" parent="Buttons"]
margin_left = 857.0
margin_top = 897.0
margin_right = 1162.0
margin_bottom = 1016.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 9 )
texture_click_mask = ExtResource( 36 )

[node name="12 Region 10" type="TextureButton" parent="Buttons"]
margin_left = 1216.0
margin_top = 952.0
margin_right = 1520.0
margin_bottom = 1108.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 11 )
texture_click_mask = ExtResource( 37 )

[node name="13 BARMM" type="TextureButton" parent="Buttons"]
margin_left = 350.0
margin_top = 926.0
margin_right = 1121.0
margin_bottom = 1151.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 12 )
texture_click_mask = ExtResource( 38 )

[node name="14 Region 11" type="TextureButton" parent="Buttons"]
margin_left = 1341.0
margin_top = 1097.0
margin_right = 1674.0
margin_bottom = 1291.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 7 )
texture_click_mask = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15 Region 12" type="TextureButton" parent="Buttons"]
margin_left = 1194.0
margin_top = 1126.0
margin_right = 1422.0
margin_bottom = 1284.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 40 )

[node name="16 Region 13" type="TextureButton" parent="Buttons"]
margin_left = 1617.0
margin_top = 950.0
margin_right = 1794.0
margin_bottom = 1154.0
rect_scale = Vector2( 1.542, 1.325 )
texture_normal = ExtResource( 5 )
texture_click_mask = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegionHudPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 24 )

[node name="RegionHud" parent="RegionHudPopup" instance=ExtResource( 23 )]

[connection signal="pressed" from="Buttons/BackButton" to="RegionHudPopup" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buttons/0 Region 1" to="RegionHudPopup" method="_on_0_Region_1_pressed"]
[connection signal="pressed" from="Buttons/1 CAR" to="RegionHudPopup" method="_on_1_CAR_pressed"]
[connection signal="pressed" from="Buttons/2 Region 2" to="RegionHudPopup" method="_on_2_Region_2_pressed"]
[connection signal="pressed" from="Buttons/3 Region 3" to="RegionHudPopup" method="_on_3_Region_3_pressed"]
[connection signal="pressed" from="Buttons/4 NCR" to="RegionHudPopup" method="_on_4_NCR_pressed"]
[connection signal="pressed" from="Buttons/5 Region 4A" to="RegionHudPopup" method="_on_5_Region_4A_pressed"]
[connection signal="pressed" from="Buttons/6 Mimaropa" to="RegionHudPopup" method="_on_6_Mimaropa_pressed"]
[connection signal="pressed" from="Buttons/7 Region 5" to="RegionHudPopup" method="_on_7_Region_5_pressed"]
[connection signal="pressed" from="Buttons/8 Region 6" to="RegionHudPopup" method="_on_8_Region_6_pressed"]
[connection signal="pressed" from="Buttons/9 Region 7" to="RegionHudPopup" method="_on_9_Region_7_pressed"]
[connection signal="pressed" from="Buttons/10 Region 8" to="RegionHudPopup" method="_on_10_Region_8_pressed"]
[connection signal="pressed" from="Buttons/11 Region 9" to="RegionHudPopup" method="_on_11_Region_9_pressed"]
[connection signal="pressed" from="Buttons/12 Region 10" to="RegionHudPopup" method="_on_12_Region_10_pressed"]
[connection signal="pressed" from="Buttons/13 BARMM" to="RegionHudPopup" method="_on_13_BARMM_pressed"]
[connection signal="pressed" from="Buttons/14 Region 11" to="RegionHudPopup" method="_on_14_Region_11_pressed"]
[connection signal="pressed" from="Buttons/15 Region 12" to="RegionHudPopup" method="_on_15_Region_12_pressed"]
[connection signal="pressed" from="Buttons/16 Region 13" to="RegionHudPopup" method="_on_16_Region_13_pressed"]
